# routines

./: B10toB.c  README.md  aac.h  adm.blade.php  adm.cpp  ani_val.cpp  avg_stream.txt  bg.sh  chained_murmur3.cpp  clang-format  cmp.h  convert.py  damm_code.hpp  fill.cpp  fps.h  ht.cpp  is_variant_member.h  price.cpp  price.h  rain_fall_volume.cpp  rand_cmp.cpp  rand_cmp2.cpp  strangerow.cpp  tropp.cpp  update_node.cpp  use_cpm.cmake  variadic_compare.hpp  Книга1.xlsm
buffex/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
buffex/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
buffex/example/: CMakeLists.txt  empty_example.cpp
buffex/include/buffex/: buffex.hpp
buffex/test/: CMakeLists.txt
buffex/test/source/: buffex_test.cpp
densearray/: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
densearray/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
densearray/example/: CMakeLists.txt  empty_example.cpp
densearray/include/densearray/: densearray.hpp
densearray/test/: CMakeLists.txt
densearray/test/source/: densearray_test.cpp
git/: install_hooks  pre-commit
interval/: CMakeLists.txt  CMakePresets.json  README.md
interval/cmake/: install-config.cmake  install-rules.cmake  variables.cmake
interval/example/: CMakeLists.txt  empty_example.cpp
interval/include/interval/: interval.hpp  interval_map.cpp
interval/test/: CMakeLists.txt
interval/test/source/: interval_test.cpp
letterdist/: Cargo.toml
letterdist/src/: main.rs
vscode/: launch.json  tasks.json
